--- a/project/final_project/assets/stylesheet/style.css
+++ b/project/final_project/assets/stylesheet/style.css
@@ -747,7 +747,7 @@ a {
 .features {
   position: relative;
   padding: 60px 0;
-  height: 900px; }
+  min-height: 900px; }
 
 .features__bg {
   position: absolute;
@@ -838,7 +838,7 @@ a {
 
 .data__container {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 30px;
   color: #fff; }
 
@@ -866,7 +866,7 @@ a {
 
 .event__more {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   grid-gap: 20px; }
 
 .event__list {
@@ -917,6 +917,50 @@ a {
     background: linear-gradient(0deg, #42b574 0%, #84c450 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; }
+.intense__theme li {
+  display: inline-block;
+  font-size: 1.2rem;
+  margin-right: 1rem; }
+
+.figure__container {
+  max-width: 90%;
+  margin: 2rem auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 50px;
+  justify-items: space-around; }
+  .figure__container figure {
+    display: inline-block; }
+    .figure__container figure img {
+      width: 100%;
+      height: auto; }
+
+.child__btn {
+  padding-bottom: 1rem; }
+
+.figure__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  justify-content: center; }
+  .figure__item h3 {
+    font-size: 1.2rem;
+    background: white;
+    color: black;
+    padding: .5rem 0;
+    display: block; }
+  .figure__item h4 {
+    font-size: 1rem;
+    background: black;
+    color: white;
+    padding: .4rem 0; }
+
+.figure__text {
+  position: absolute;
+  top: 30%;
+  left: 7%;
+  transform: translateY(-50%, -50%); }
 
 .team__header h3 {
   font-size: 3rem; }
@@ -933,7 +977,7 @@ a {
 .team__member {
   margin-top: 2rem;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 30px; }
   .team__member .member .member__hr {
     width: 20%; }
@@ -990,12 +1034,21 @@ a {
     font-size: 1rem; }
 
 .client__image {
-  margin: 2rem 0; }
+  width: 50%;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  margin: 2rem auto; }
 
 .client__img__list {
-  width: 140px;
-  height: 140px;
+  align-self: center;
+  justify-self: center;
+  width: 100px;
+  height: 100px;
   border-radius: 50%; }
+
+.middle {
+  width: 140px;
+  height: 140px; }
 
 .footer {
   display: grid;
@@ -1011,7 +1064,8 @@ a {
     color: white;
     margin-bottom: 1rem; }
   .footer__header p {
-    color: #857e7e; }
+    color: #857e7e;
+    margin-top: 2rem; }
   .footer__header .media__content {
     justify-content: space-between;
     max-width: 100%; }
@@ -1060,11 +1114,30 @@ a {
   font-size: 1rem;
   color: white;
   margin-bottom: 2rem; }
+.latest__news h5 {
+  font-size: .8rem;
+  color: #444242;
+  margin-bottom: .8rem; }
 
 .footer__bottom {
   background: #202020;
   padding: 2rem 1rem;
   font-size: 1rem;
   color: #444242; }
+
+@media all and (max-width: 760px) {
+  .client__image {
+    grid-template-columns: 1fr; }
+
+  .client__img__list {
+    display: none; }
+
+  .middle {
+    display: block;
+    justify-self: center; }
+
+  .footer {
+    grid-template-columns: 1fr;
+    text-align: center; } }
 
 /*# sourceMappingURL=style.css.map */
