--- a/project/final_project/assets/stylesheet/style.scss
+++ b/project/final_project/assets/stylesheet/style.scss
@@ -339,7 +339,7 @@
 .features {
 	position: relative;
 	padding: 60px 0;
-	height: 900px;
+	min-height: 900px;
 }
 .features__bg {
 	position: absolute;
@@ -440,7 +440,7 @@
 }
 .data__container {
 	display: grid;
-	grid-template-columns: repeat(4, auto);
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 	grid-gap: 30px;
 	color: $primary-text-color;
 }
@@ -484,7 +484,7 @@
 // ====================
 .event__more {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
 	grid-gap: 20px;
 }
 .event__list {
@@ -552,6 +552,56 @@
 			-webkit-text-fill-color: transparent;
 		}
 	}
+	li {
+		display: inline-block;
+		font-size: 1.2rem;
+		margin-right: 1rem;	
+	}
+}
+.figure__container {
+	max-width: 90%;
+	margin: 2rem auto;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-gap: 50px;
+	justify-items: space-around;
+	figure {
+		display: inline-block;
+		img {
+			width:100%;
+			height: auto;
+		}	
+	}
+}
+.child__btn {
+	padding-bottom: 1rem;
+}
+.figure__item {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	position: relative;
+	justify-content: center;
+	h3 {
+		font-size: 1.2rem;
+		background: white;
+		color:black;
+		padding: .5rem 0;
+		display: block;
+	}
+	h4 {
+		font-size: 1rem;
+		background: black;
+		color: white;
+		padding: .4rem 0;
+	}
+		
+}
+.figure__text {
+	position: absolute;
+	top:30%;
+	left:7%;
+	transform: translateY(-50%, -50%);
 }
 
 // ====================
@@ -576,7 +626,7 @@
 .team__member {
 	margin-top: 2rem;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 	grid-gap:30px;
 	.member {
 		.member__hr {
@@ -648,14 +698,22 @@
 	}
 }
 .client__image{
-	margin: 2rem 0;
+	width:50%;
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	margin: 2rem auto;
 }
 .client__img__list {
-	width: 140px;
-	height: 140px;
+	align-self: center;
+	justify-self: center;
+	width: 100px;
+	height: 100px;
 	border-radius: 50%;
 }
-
+.middle {
+	width:140px;
+	height:140px;
+}
 
 
 // ====================
@@ -677,6 +735,7 @@
 	}
 	p {
 		color: rgb(133, 126, 126);
+		margin-top: 2rem;
 	}
 	.media__content {
 		justify-content: space-between;
@@ -720,9 +779,7 @@
 			background: rgb(76, 179, 76);
 			padding: .6rem 1rem;
 		}
-	
 	}
-	
 }
 .useful__links {
 	li {
@@ -742,6 +799,11 @@
 		color: white;
 		margin-bottom: 2rem;
 	}
+	h5 {
+		font-size: .8rem;
+		color: rgb(68, 66, 66);
+		margin-bottom: .8rem;
+	}
 }
 
 
@@ -754,4 +816,24 @@
 	padding: 2rem 1rem;
 	font-size: 1rem;
 	color: rgb(68, 66, 66);
+}
+
+
+
+
+@media all and (max-width:760px){
+	.client__image{
+		grid-template-columns: 1fr;
+	}
+	.client__img__list{
+		display: none;
+	}
+	.middle {
+		display: block;
+		justify-self: center;
+	}
+	.footer {
+		grid-template-columns: 1fr;
+		text-align: center;
+	}
 }
